# foxhound

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SOUL.md  fly.toml  pyproject.toml
.claude/: settings.json
.claude/commands/: review.md
.github/scripts/: validate_pr_evidence.py
.github/workflows/: ci.yml
app/: cli.py  main.py  mcp_server.py
app/api/: ownership.py  rate_limit.py
app/autoresearch/: evaluator.py  experiment_runner.py  mutator.py  registry.py
app/core/: config.py  errors.py  logging.py  vertical_config.py  verticals.yaml
app/db/: session.py
app/jobs/: __init__.py  base.py  corpus_ingestion.py  preview_cleanup.py  tinyfish_jobs.py
app/ml/: lightgbm_ranker.py  model_registry.py  setfit_relevance.py  training_pipeline.py
app/services/: application_guidance.py  auth_service.py  career_trajectory.py  ghost_detector.py  notification_destination_service.py  notification_history_service.py  notification_service.py  paperclip_client.py  run_service.py  tinyfish_concurrency.py
app/static/: app.css  app.js
docker/sandbox-runtime/: Dockerfile  entrypoint.sh  package.json  tailwind.config.ts  upload-server.js  vite.config.ts
docker/sandbox-runtime-api/: Dockerfile  entrypoint.sh  requirements.txt  upload_server.py
foxhound/: __init__.py  __main__.py
foxhound/adapters/: __init__.py  anthropic_adapter.py  benchmark.py  deepseek_adapter.py  github_connector.py  google_adapter.py  image_adapter.py  openai_adapter.py  provider.py  registry.py  router.py  tier_resolver.py
foxhound/analyzer/: __init__.py  engine.py
foxhound/api/: app.py  dependencies.py  run.py  schemas.py
foxhound/cli/: __init__.py  app.py  init_flow.py  run_pipeline.py
foxhound/core/: __init__.py  config.py  coordinator.py  event_bus.py  lock_manager.py  models.py  paths.py  queue.py  repo_registry.py  spawn_rules.py
foxhound/discovery/: __init__.py  scanners.py  worker.py
foxhound/execution/: ralph.py  (+7 more)
marketing-strategy/: EXECUTION_ROADMAP_Q2_2026.md  GTM_PLAN.md  MESSAGING_HOUSE.md  VERTICALS_STRATEGY.md
scripts/: supabase_rls_policies.sql
tests/: __init__.py  conftest.py  test_activity_and_brief.py  test_agent_guards.py  test_agent_tools.py  test_agentql_apply.py  test_analyzer.py  test_application_guidance.py  test_application_orchestrator.py  test_applications_api.py  test_approval_cli.py  test_artifact_store.py  test_capabilities.py  test_channel_adapters.py  test_code_review.py  test_connectors.py  test_context.py  test_coordinator.py  test_core_models.py  test_creative_tier.py  test_discovery.py  test_discovery_engine.py  test_dispatch_api.py  test_evaluation.py  test_event_bus.py  test_execution_engine.py  test_form_scanner.py  test_foxhound_agent.py  test_foxhound_init.py  test_hackernews_connector.py  test_harness.py  test_ingest_ssrf.py  test_jobs_api.py  test_lock_manager.py  test_match_scorer.py  test_model_tier.py  test_notifications.py  test_notifications_api.py  test_observability_cli.py  test_observer_store.py  (+29 more)
ui/: next.config.ts  package-lock 2.json  package-lock 3.json  package-lock.json  package.json
web/: .gitignore  next.config.ts  package-lock.json  package.json
(+326 files in other folders)
