[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foxhound"
version = "0.1.0"
description = "Sniff out ideas worth building. Ship them fast."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Foxhound Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "textual>=0.50.0",
    "httpx>=0.28.1",
    "feedparser>=6.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "desktop-notifier>=6.0",
    "twilio>=9.0",
    "resend>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
foxhound = "foxhound.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["foxhound"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
