[project]
name = "foxhound"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "tinyfish",
    "anthropic",
    "pdfplumber",
    "playwright",
    "pyyaml",
]

[project.optional-dependencies]
ml = [
    "setfit",
    "sentence-transformers",
    "torch>=2.4",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
foxhound = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
