[project]
name = "foxhound"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "httpx",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "tinyfish",
    "anthropic",
    "pdfplumber",
    "playwright",
    "pyyaml",
]

[project.optional-dependencies]
ml = [
    "setfit",
    "sentence-transformers",
    "torch>=2.4",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
foxhound = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402", "E741", "E701", "F821", "F402"]
